# rust-by-example

./: Cargo.toml
examples/: comments.rs
examples/arrays_and_slices/: main.rs
examples/associated_functions_and_methods/: main.rs
examples/casting/: main.rs
examples/closure_capturing/: main.rs
examples/closure_example/: main.rs
examples/closure_input_functions/: main.rs
examples/closure_output_parameters/: main.rs
examples/closure_parameter/: main.rs
examples/closure_parameters/: main.rs
examples/closure_searching/: main.rs
examples/closure_type_anonymity/: main.rs
examples/closures/: main.rs
examples/constants/: main.rs
examples/debug/: main.rs
examples/display/: main.rs
examples/enums/: main.rs
examples/expressions/: main.rs
examples/for_and_range/: main.rs
examples/formatted_print/: main.rs
examples/formatting/: main.rs
examples/from_and_into/: main.rs
examples/if_let/: main.rs
examples/let_else/: main.rs
examples/literals/: main.rs
examples/loop/: main.rs
examples/match/: main.rs
examples/match_binding/: main.rs
examples/match_guards/: main.rs
examples/structures/: main.rs
examples/test_case_list/: main.rs
examples/testcase_linked_list/: main.rs
examples/to_and_from_strings/: main.rs
examples/try_from_and_try_into/: main.rs
examples/tuple/: main.rs
examples/visibility/: main.rs
examples/while_let/: main.rs
