[package]
name = "rust-by-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "rust_by_example"
path = "src/lib.rs"

[[example]]
name = "hello_world"

[[example]]
name = "comments"

[[example]]
name = "formatted_print"

[[example]]
name = "debug"

[[example]]
name = "display"

[[example]]
name = "test_case_list"