[package]
name = "rust-by-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "rust_by_example"
path = "src/lib.rs"

[[example]]
name = "hello_world"

[[example]]
name = "comments"

[[example]]
name = "formatted_print"

[[example]]
name = "debug"

[[example]]
name = "display"

[[example]]
name = "test_case_list"

[[example]]
name = "formatting"

[[example]]
name = "tuple"

[[example]]
name = "arrays_and_slices"

[[example]]
name = "structures"

[[example]]
name = "enums"

[[example]]
name = "testcase_linked_list"

[[example]]
name = "constants"

[[example]]
name = "casting"

[[example]]
name = "literals"

[[example]]
name = "from_and_into"

[[example]]
name = "try_from_and_try_into"

[[example]]
name = "to_and_from_strings"

[[example]]
name= "expressions"

[[example]]
name= "loop"

[[example]]
name= "for_and_range"

[[example]]
name= "match"

[[example]]
name= "match_guards"

[[example]]
name= "match_binding"

[[example]]
name= "if_let"

[[example]]
name= "let_else"

[[example]]
name= "while_let"

[[example]]
name = "associated_functions_and_methods"

[[example]]
name = "closures"

[[example]]
name = "closure_capturing"

[[example]]
name = "closure_parameter"

[[example]]
name = "closure_parameters"

[[example]]
name = "closure_type_anonymity"

[[example]]
name = "closure_input_functions"

[[example]]
name = "closure_output_parameters"

[[example]]
name = "closure_example"